[tool.poetry]
name = "yulu-poetry"
version = "0.1.0"
description = ""
authors = ["Egor Lavysh <egorlavys95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.20.0.post0"
pydantic-settings = "^2.10.1"
sqlalchemy = "^2.0.41"
alembic = "^1.16.2"
psycopg2 = "^2.9.10"
aiohttp-socks = "^0.10.1"
asyncpg = "^0.30.0"
gspread = "^6.2.1"
google-auth = "^2.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
